# startensor

./: replaysorter.py  sc2protossabilities
hello_starcraft/: CMakeLists.txt  build_tensormodel.py  hello_starcraft.cc
hello_starcraft/replay_transcriber/: replay_transcriber.cc
